# cplusplus17

./: README.md
Array/Matrix/: MatrixUsing1DFlatArray.cpp  MatrixUsingDynamicMemoryAllocation.cpp  MatrixUsingFixedSizedArray.cpp  MatrixUsingLibraryArray.cpp  MatrixUsingValArray.cpp  MatrixUsingVectorOfVectors.cpp
Basic/polymorphism/dynamic/: VirtualFunctionPolymorphism.cpp
BitManipulation-C++/: bits-addition.cpp  bits-multiplication.cpp  bits-substraction.cpp  notes.cpp
C++Programming/: CppCreateObjectOfClass.cpp  CppCreateObjectOfStructure.cpp  Reference.cpp  student.h  studentMain.cpp
CMakeProjectsC++/College/: CMakeLists.txt  CMakePresets.json  College.cpp  College.h  Main.cpp
CMakeProjectsC++/School/: CMakeLists.txt  Main.cpp  Student.cpp
Dynamic-Programming/: Knapsack.cpp  knapsackWithMemoization .cpp
Graph/: .gitignore  AdjacencyList.WithMapcpp  AdjacencyListWithStructClass.cpp  AdjacencyMatrix.cpp  DirectTranslationOfTheDefinition.cpp  countOddDegreeNodes.cpp
LinkedList/Double/: CMakeLists.txt  DoubleLinkedList.cpp  DoubleLinkedList.h  Main.cpp
LinkedList/Single/: CMakeLists.txt  Main.cpp  SingleLinkedList.cpp  SingleLinkedList.h
Modern C++/Thread/: FetchCurrentWeatherReport.cpp
Pointer/: C-styleCast.c  const_cast.cpp  dangling-pointer.cpp  dynamic_cast.cpp  reinterpret_cast.cpp  static_cast.cpp
STL/: MergeTwoUnsortedArraysIntoASingleArray.cpp  SwapUsingBubble.cpp  Vector.cpp  VectorWithTemplate.cpp
SmartPointer/: shared_ptr.cpp  smart_pointer.cpp  unique_ptr.cpp  weak_ptr.cpp
Test/: HelloW.cpp
patternprintingprograms/: CMakeLists.txt  Main.cpp  Triangle.cpp  Triangle.h
